--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -1,6 +1,7 @@
 @CHARSET "UTF-8";
-html,body,ul,h1,h2,h3,p,button,ul{padding:0;margin:0;border: none}
+html,body,ul,h1,h2,h3,p,button,ul{padding:0;margin:0;border: none;}
 a{text-decoration: none;}
+li{list-style-type:none;}
 .hr1{width:100%;height:2px;margin:1rem auto}
 .hr2{width:50%;height:2px;margin:0 auto 2rem auto;background:#fff}
 .lef{float:left}
@@ -11,17 +12,21 @@ p{font-size:1.2rem;letter-spacing: .1rem;line-height: 1.5rem;}
 .clearfix:after{content:"";display:block;clear:both;}
 /* 去掉setion间的间隙 */
 section{font-size:0}
+
+#mask{position:fixed;display:none;top:0;bottom:0;right:0;left:0;background:rgba(0,0,0,0.5)}
+
 /* background-attachment=fixed让背景固定 */  
 .main-wrapper{background:#444 url(" ../img/banner.jpg");background-attachment: fixed;
 background-repeat:no-repeat;background-size:cover;background-position:center center;}
 
 header{color:#fff;background:rgba(0,0,0,0.05)}
 header a{color:#fff}
-header nav{line-height:2.5rem;height:2.5rem;background:rgba(0,0,0,0.06)}
+header nav{line-height:3.5rem;height:3.5rem;background:rgba(0,0,0,0.06);}
 header nav ul{float: right;}
-header nav ul li{display:inline-block;line-height:2.5rem;margin-right:1rem;}
+header nav ul li{display:inline-block;line-height:inherit;margin-right:1rem;}
 header nav ul li a{display:block;line-height:inherit;}
-header nav .logo{line-height:inherit;float:left;margin-left:2rem;font-size:1.7rem;font-weight: 700;letter-spacing:.4rem}
+.logo{height:inherit;float:left;margin-left:2rem;}
+.logo img{height:3rem;}
 .inner p{line-height: 1.5rem} 
 header .banner{height:38rem;background:transparent;}
 .inner{position:relative;max-width:20rem;text-align:center;margin:0 auto;top:6.5rem}
@@ -74,3 +79,9 @@ header .banner{height:38rem;background:transparent;}
 footer{height:11rem;background:rgba(37,47,52,0.9);text-align: center;}
 footer li{display:inline-block;padding:2rem .8rem} 
 footer .copy{padding:2rem;font-size:1.5rem}
+
+#sidebar{position:fixed;top:0;right:-250px;width:250px;height:100%;background:#696868;padding:10px 0;transition:0.5s}
+#sidebar ul a{display:inline-block;padding:10px;color:#fff;width:100%}
+#sidebar ul a:hover{background:#bbb}
+
+#back-to-top{position:fixed;right:20px;bottom:20px;padding:10px;border:1px silver #bbb;}
