--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -19,12 +19,12 @@ section{font-size:0}
 .main-wrapper{background:#444 url(" ../img/banner.jpg");background-attachment: fixed;
 background-repeat:no-repeat;background-size:cover;background-position:center center;}
 
+nav{width:100%;line-height:3.5rem;height:3.5rem;background:rgba(0,0,0,0.2);position:fixed;transition:0.5s;}
+nav ul{float: right;}
+nav ul li{display:inline-block;line-height:inherit;margin-right:1rem;}
+nav ul li a{color:#fff;display:block;line-height:inherit;}
 header{color:#fff;background:rgba(0,0,0,0.05)}
 header a{color:#fff}
-header nav{line-height:3.5rem;height:3.5rem;background:rgba(0,0,0,0.06);}
-header nav ul{float: right;}
-header nav ul li{display:inline-block;line-height:inherit;margin-right:1rem;}
-header nav ul li a{display:block;line-height:inherit;}
 .logo{height:inherit;float:left;margin-left:2rem;}
 .logo img{height:3rem;}
 .inner p{line-height: 1.5rem} 
